Added donate-app, draft

--- a/src/gc-common/gc-api-ajax.html
+++ b/src/gc-common/gc-api-ajax.html
@@ -44,7 +44,7 @@
       };
     }
     _computeApiHeaders(authUser) {
-      if (!authUser) return;
+      if (!authUser) return {};
       return {
         authorization: authUser.authToken
       };
