--- a/src/gc-common/gc-shell-behavior.html
+++ b/src/gc-common/gc-shell-behavior.html
@@ -12,7 +12,7 @@
       },
       lazyComponents: {
         type: Array,
-        value: []
+        value: () => []
       },
       lazyComponentsLoaded: {
         type: Boolean,
