--- a/src/gc-dashboard/gc-repos.html
+++ b/src/gc-dashboard/gc-repos.html
@@ -9,7 +9,7 @@
 <dom-module id="gc-repos">
   <template>
     <style include="shared-styles"></style>
-    <gc-api-ajax id="get" url="/user/repos" auth-user="[[authUser]]" last-response="{{repos}}"></gc-api-ajax>
+    <gc-api-ajax id="get" url="/user/repos" auth-user="[[authUser]]" on-response="_handleGetResponse" last-response="{{repos}}"></gc-api-ajax>
     <gc-api-ajax id="put" method="put" url="/user/repos" auth-user="[[authUser]]" on-response="_handlePutResponse" last-response="{{_newRepos}}"></gc-api-ajax>
     <paper-material elevation="1">
       <div class="layout horizontal">
@@ -42,6 +42,10 @@
       }
       updateRepos() {
         this.$.put.generateRequest();
+      }
+      _handleGetResponse() {
+        if (this.repos.length === 0)
+          this.updateRepos();
       }
       _handlePutResponse() {
         this.push('repos', ...this._newRepos)
