Draft version of landing page

--- a/src/gc-app/gc-account-setup.html
+++ b/src/gc-app/gc-account-setup.html
@@ -37,8 +37,8 @@
         </template>
       </paper-listbox>
     </paper-dropdown-menu>
-    <i>This information is crucial for us to propperly setup Stripe account and be ablle to send your donations back to your bank account.</i>
-    <i>Please select country that match you have your bank account in.</i>
+    <i>This information is crucial to propperly setup Stripe account and be ablle to send your donations back to you.</i>
+    <i>Please select country that you have your bank account in.</i>
     <div actions>
       <paper-button on-tap="_submit">submit</paper-button>
     </div>
