--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
   body {
     margin: 0;
     font-family: 'Roboto', 'Noto', sans-serif;
+    color: #212121;
     line-height: 1.5;
     min-height: 100vh;
     background-color: #eeeeee;
