--- a/src/gc-app/gc-account-setup.html
+++ b/src/gc-app/gc-account-setup.html
@@ -14,9 +14,10 @@
     }
     
     :host {
-      @apply(--dark-theme);
       @apply(--layout-fit);
       @apply(--layout-vertical);
+      background-color: var(--default-primary-color);
+      color: var(--dark-theme-text-color);
       z-index: 888888888;
       padding: 2rem;
     }
