--- a/src/gc-common/gc-api-ajax.html
+++ b/src/gc-common/gc-api-ajax.html
@@ -52,9 +52,10 @@
       };
     }
     generateRequest() {
+      console.log('generating request with config: ' + this.apiUri);
       return this.$.ajax.generateRequest();
     }
   }
-  new Polymer(GcApijax);
+  Polymer(GcApijax);
 })();
 </script>
