--- a/src/gc-user/gc-user-managed-accounts-info-behavior.html
+++ b/src/gc-user/gc-user-managed-accounts-info-behavior.html
@@ -48,6 +48,9 @@
     },
     _handleInfoUpdatedResponse: function() {
       this.fire('info-updated');
+      if (this.$.toast) {
+        this.$.toast.show();
+      }
     }
   };
 }());
