Fixed safari ladnig-page issue

--- a/src/gc-landing-page/gc-landing-page.html
+++ b/src/gc-landing-page/gc-landing-page.html
@@ -67,14 +67,12 @@
       }
     }
 
-    #why > div > paper-material,
-    #why > div > paper-card {
+    #why paper-material {
       flex-basis: 100%;
     }
 
     @media (min-width: 601px) {
-      #why > div > paper-material,
-      #why > div > paper-card {
+      #why paper-material {
         flex-basis: 25%;
       }
     }
