--- a/src/gc-repo/gc-repo-shell.html
+++ b/src/gc-repo/gc-repo-shell.html
@@ -1,12 +1,23 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../gc-layouts/gc-app-fragment-layout.html">
+<link rel="import" href="../gc-styles/gc-shared-styles.html">
+<link rel="import" href="../gc-common/gc-icons.html">
 <link rel="import" href="../gc-common/gc-app-context-behavior.html">
 <link rel="import" href="../gc-common/gc-shell-behavior.html">
 <link rel="import" href="../gc-repo/gc-repo.html">
 <dom-module id="gc-repo-shell">
   <template>
-    <style></style>
+    <style include="shared-styles"></style>
+    <style>
+      paper-icon-button {
+        color: #FFF;
+      }
+    </style>
     <gc-app-fragment-layout title="[[repo.name]]" back-button>
+      <a title-addon href="https://github.com/[[repo.fullname]]" target="_blank">
+        <paper-icon-button  icon="gc-icons:github"></paper-icon-button>
+      </a>
       <gc-repo id="repo" repo-id="[[repoId]]" auth-user="[[authUser]]" repo="{{repo}}"></gc-repo>
     </gc-app-fragment-layout>
   </template>
