--- a/src/gc-landing-page/gc-landing-page.html
+++ b/src/gc-landing-page/gc-landing-page.html
@@ -162,7 +162,7 @@
           <gc-landing-page-section id="what" title="Whats That?!">
             <div class="layout horizontal">
               <div>
-                <p>Gitcheese is simple way to donate source projects!</p>
+                <p>Gitcheese is simple way to donate open source projects!</p>
                 <template is="dom-if" if="[[mobile]]">
                   <iron-image class="crowd" src="/../../images/crowd.png"></iron-image>
                 </template>
