--- a/src/gc-user/gc-user-shell.html
+++ b/src/gc-user/gc-user-shell.html
@@ -1,6 +1,5 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../gc-layouts/gc-app-fragment-layout.html">
-<link rel="import" href="../gc-common/gc-app-context-behavior.html">
 <link rel="import" href="../gc-common/gc-shell-behavior.html">
 <link rel="import" href="../gc-styles/gc-shared-styles.html">
 <link rel="import" href="../gc-user/gc-user.html">
@@ -19,13 +18,13 @@
         return 'gc-user-shell';
       }
       get behaviors() {
-        return [GitcheeseBehaviors.AppContextBehavior, GitcheeseBehaviors.ShellBehavior];
+        return [...GitcheeseBehaviors.ShellBehavior];
       }
       activated() {
         this.$.user.loadData();
       }
     }
-    new Polymer(GcUserShell);
+    Polymer(GcUserShell);
   })();
   </script>
 </dom-module>
